[package]
name = "_treelib"
version = "0.1.0"
authors = ["Cathal Garvey <cathalgarvey@cathalgarvey.me>"]

[lib]
name = "_treelib"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.8.0"
num = "*"
pyo3 = "*"

[features]
#python27-sys = ["cpython/python27-sys"]
python3-sys = ["cpython/python3-sys"]

[dependencies.cpython]
version = "0.3"
features = ["extension-module", "python3-sys"]
default-features = false
